Arraylist Methods
Implemented some remaining methods of the ArrayList